namespaced-policies.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-ns-a-to-ns-b
  namespace: ns-b
spec:
  order: 100
  selector: all()
  types:
    - Ingress
  ingress:
    - action: Allow
      source:
        namespaceSelector: "kubernetes.io/metadata.name in {'ns-a'}"
    - action: Allow
      source:
        selector: "subnets == 'ns-a-private-subnet'"
